--- a/css/wa5.css
+++ b/css/wa5.css
@@ -99,7 +99,7 @@ html {
   }
 
   .card2 h2, .card2 p {
-    font-family: Impact, 'Arial Narrow Bold', sans-serif;
-  }
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
 
 
