--- a/css/wa6.css
+++ b/css/wa6.css
@@ -1,3 +1,20 @@
 body {
-    background-image: url("/img/chris.jpg");
+    background-image: url("/img/IMG_7200.jpeg");
+    background-size: 85%;
+}
+
+h2 {
+    background-color: white;
+    width: fit-content;
+    position: absolute;
+    bottom: 50px;
+    right: 50px;
+    margin-right: 40px;
+    margin-top: 50px;
+    padding: 5px;
+}
+
+img {
+    margin-left: 40px;
+    margin-top: 40px;
 }
