--- a/css/wa6.css
+++ b/css/wa6.css
@@ -4,7 +4,7 @@ body {
 }
 
 h2 {
-    background-color: white;
+    background-color: red;
     width: fit-content;
     position: absolute;
     bottom: 50px;
