--- a/js_project/style.css
+++ b/js_project/style.css
@@ -1,70 +1,15 @@
 #grid {
-    border: 1px solid black;
     height: 60vh;
     width: 60vh;
     margin: auto;
     margin-top: 20vh;
     position: relative;
     display: grid;
-    grid-template-columns: repeat(3, 20vh);
     grid-template-rows: repeat(3, 20vh);
-  }
-  #a_1 {
-    /* background-color: red; */
-    grid-column: 1;
-    grid-row: 1;
-    border: 1px solid black;
-  }
-  #a_2 {
-    /* background-color: red; */
-    grid-column: 2;
-    grid-row: 1;
-    border: 1px solid black;
-  }
-  #a_3 {
-    /* background-color: red; */
-    grid-column: 3;
-    grid-row: 1;
-    border: 1px solid black;
-  }
-  #b_1 {
-    /* background-color: green; */
-    grid-column: 1;
-    grid-row: 2;
-    border: 1px solid black;
-  }
-  #b_2 {
-    /* background-color: green; */
-    grid-column: 2;
-    grid-row: 2;
-    border: 1px solid black;
-  }
-  #b_3 {
-    /* background-color: green; */
-    grid-column: 3;
-    grid-row: 2;
-    border: 1px solid black;
-  }
-  #c_1 {
-    /* background-color: blue; */
-    grid-column: 1;
-    grid-row: 3;
-    border: 1px solid black;
-  }
-  #c_2 {
-    /* background-color: blue; */
-    grid-column: 2;
-    grid-row: 3;
-    border: 1px solid black;
-  }
-  #c_3 {
-    /* background-color: blue; */
-    grid-column: 3;
-    grid-row: 3;
-    border: 1px solid black;
+    grid-template-columns: repeat(3, 20vh);
   }
 
   button {
-    width: 20vh;
-    height: 20vh;
+    width: 100%;
+    height: 100%;
   }
