--- a/js_project/style.css
+++ b/js_project/style.css
@@ -1,15 +1,100 @@
+body {
+  background-color: #F7F3E3;
+  font-family: "owners", sans-serif;
+  font-weight: 500;
+  font-style: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  height: 100px; /* Adjust height as needed */
+  position: relative;
+}
+
+h1 {
+  margin-left: 4vw;
+  width: fit-content;
+  position: relative;
+}
+
+table, th, td {
+  border: 1px solid #6F1A07;
+  border-collapse: collapse;
+  border-spacing: 0;
+  padding: 5px;
+  margin-left: 4vw;
+  position: relative;
+}
+
+table {
+  clear: both;
+}
+
 #grid {
-    height: 60vh;
-    width: 60vh;
     margin: auto;
-    margin-top: 20vh;
+    margin-top: 6vh;
     position: relative;
     display: grid;
-    grid-template-rows: repeat(3, 20vh);
-    grid-template-columns: repeat(3, 20vh);
+}
+
+#grid button {
+    width: 100%;
+    height: 100%;
+    background-color: #6F1A07;
+    color: #F7F3E3;
+    border-color: #F7F3E3;
   }
 
   button {
-    width: 100%;
-    height: 100%;
+    font-size: 90px;
   }
+
+#top {
+  color: #2B2118;
+  width: 60vh;
+  margin: auto;
+  position: relative;
+  text-align: center;
+}
+
+#player, #level {
+  display: inline;
+  padding-bottom: 10px;
+}
+
+#player {
+  position: absolute;
+  left: 0;
+}
+
+#level {
+  position: absolute;
+  right: 0;
+}
+
+#top button{
+  margin: 0;
+  margin-top: 6vh;
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+#middle {
+  position: absolute;
+  justify-content: center;
+  top: 100%;
+  left: 50%;
+  -ms-transform: translate(-50%, 0%);
+  transform: translate(-50%, 0%);
+}
+
+#side {
+  margin-left: 0;
+}
+
+#instructions {
+  text-align: center;
+  font-weight: 500;
+}
