--- a/js_project/style.css
+++ b/js_project/style.css
@@ -1,12 +1,12 @@
 body {
-  background-color: #F7F3E3;
+  background-color: #f7f3e3;
   font-family: "owners", sans-serif;
   font-weight: 500;
   font-style: bold;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  height: 100px; /* Adjust height as needed */
+  height: 100px;
   position: relative;
 }
 
@@ -16,8 +16,10 @@ h1 {
   position: relative;
 }
 
-table, th, td {
-  border: 1px solid #6F1A07;
+table,
+th,
+td {
+  border: 1px solid #6f1a07;
   border-collapse: collapse;
   border-spacing: 0;
   padding: 5px;
@@ -30,35 +32,37 @@ table {
 }
 
 #grid {
-    margin: auto;
-    margin-top: 6vh;
-    position: relative;
-    display: grid;
+  margin: auto;
+  margin-top: 0;
+  position: relative;
+  display: grid;
 }
 
 #grid button {
-    width: 100%;
-    height: 100%;
-    background-color: #6F1A07;
-    color: #F7F3E3;
-    border-color: #F7F3E3;
-  }
+  width: 100%;
+  height: 100%;
+  background-color: #6f1a07;
+  color: #f7f3e3;
+  border-color: #f7f3e3;
+}
 
-  button {
-    font-size: 90px;
-  }
+button {
+  font-size: 90px;
+}
 
 #top {
-  color: #2B2118;
+  color: #2b2118;
   width: 60vh;
   margin: auto;
   position: relative;
   text-align: center;
 }
 
-#player, #level {
+#player,
+#level {
   display: inline;
-  padding-bottom: 10px;
+  bottom: 0;
+  margin: 0;
 }
 
 #player {
@@ -71,7 +75,7 @@ table {
   right: 0;
 }
 
-#top button{
+#top button {
   margin: 0;
   margin-top: 6vh;
   position: absolute;
@@ -79,6 +83,7 @@ table {
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  z-index: 1;
 }
 
 #middle {
